# gold-group-diversity

./: README.md  gold-group-diversity.cabal
app/: Main.hs
data/: long.csv  short.csv
src/: IOActions.hs  Lib.hs  Parse.hs  Types.hs
test/: Test.hs  TestLib.hs  Util.hs
