name:                   gold-group-diversity
version:                0.1.0.0
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Types
                      , Lib
  build-depends:        base
  default-language:     Haskell2010

executable diversify
  main-is:              Main.hs
  hs-source-dirs:       app
  build-depends:        base
                      , gold-group-diversity
  default-language:     Haskell2010

test-suite diversify-test
  type:                 exitcode-stdio-1.0
  main-is:              Test.hs
  hs-source-dirs:       test
  other-modules:        TestLib
                      , Util
  build-depends:        base
                      , gold-group-diversity
                      , QuickCheck
  default-language:     Haskell2010
